uploaded_new_images

--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,8 @@
     NAVIGATION              
   -----------------------------------------*/
   .sticky-wrapper {
-    /* background: var(--navbar-bg-color); */
+     background: var(--navbar-bg-color); 
+     opacity: 0.6;
   }
   
   .navbar {
